[package]
name = "minecraft_utils"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Utilities for working with minecraft and the mojang api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
base64-serde = "0.6.1"
bitflags = "1.3.2"
minreq = { version = "2.4.2", features = ["https", "json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
sha-1 = "0.10.0"
thiserror = "1.0.30"
